syntax = 'proto3';

package contact;

import "google/protobuf/timestamp.proto";

message Contact {
  string _id = 1;
  optional string link = 2;
  string name = 3;
  string value = 4;
  bool isPublic = 6;
  google.protobuf.Timestamp createdAt = 8;
  optional google.protobuf.Timestamp updatedAt = 9;
}

message ContactQuery {
  optional string id = 1;
  repeated string ids = 2;
  optional string name = 3;
  optional bool isPublic = 4;
}

message ContactRequest {
  optional ContactQuery query = 1;
}

message ContactList {
  repeated Contact items = 1;
}
